@@ -5,3 +5,4 @@ require File.expand_path("#{dir}/extensions/action_controller/test_response")
 require File.expand_path("#{dir}/extensions/action_view/base")
 require File.expand_path("#{dir}/extensions/nil_class")
 require File.expand_path("#{dir}/extensions/kernel")
+require File.expand_path("#{dir}/extensions/spec/expectations/should/collection_handler")
